--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ apply plugin: 'propdeps-idea'
 wrapper.gradleVersion = '3.4.1'
 
 archivesBaseName = 'spiders-and-robots-client'
-version = '0.1.0'
+version = '0.1.0-rc1'
 
 def javaVersion = JavaVersion.VERSION_1_7
 
