--- a/build.gradle
+++ b/build.gradle
@@ -64,8 +64,8 @@ sourceSets {
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'org.apache.commons:commons-csv:1.4'
-    compile 'commons-net:commons-net:3.6'
     compile 'commons-io:commons-io:2.5'
+    compile 'com.github.seancfoley:ipaddress:5.3.1'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:2.6.0'
