Fix PGP signing by base64-decoding the secret key
The PGP_SECRET is stored base64-encoded (sbt-ci-release format) but
Gradle's useInMemoryPgpKeys expects the raw ASCII-armored key.

--- a/build.gradle
+++ b/build.gradle
@@ -139,7 +139,8 @@ publishing {
 }
 
 signing {
-    def signingKey = System.getenv("PGP_SECRET")
+    def signingKeyBase64 = System.getenv("PGP_SECRET")
+    def signingKey = signingKeyBase64 != null ? new String(Base64.decoder.decode(signingKeyBase64)) : null
     def signingPassword = System.getenv("PGP_PASSPHRASE")
     useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
