--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id 'signing'
 }
 
@@ -124,17 +125,18 @@ publishing {
         }
     }
 
+}
+
+nexusPublishing {
     repositories {
-        maven {
-            name = "OSSRH"
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            credentials {
-                username = System.getenv("SONA_USER") ?: findProperty("SONA_USER") ?: ""
-                password = System.getenv("SONA_PASS") ?: findProperty("SONA_PASS") ?: ""
-            }
+        sonatype {
+            username = System.getenv('SONA_USER')
+            password = System.getenv('SONA_PASS')
         }
+    }
+    transitionCheckOptions {
+        maxRetries.set(360)
+        delayBetween.set(java.time.Duration.ofSeconds(20))
     }
 }
 
