Try s01.oss.sonatype.org for Nexus publishing

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,8 @@ publishing {
 nexusPublishing {
     repositories {
         sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             username = System.getenv('SONA_USER')
             password = System.getenv('SONA_PASS')
         }
