--- a/build.gradle
+++ b/build.gradle
@@ -130,8 +130,8 @@ publishing {
 nexusPublishing {
     repositories {
         sonatype {
-            username = System.getenv('SONA_USER')
-            password = System.getenv('SONA_PASS')
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
         }
     }
     transitionCheckOptions {
