--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 
 group = 'com.snowplowanalytics'
 archivesBaseName = 'iab-spiders-and-robots-client'
-version = '0.2.1-M1'
+version = '0.3.0'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
