--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Validate Gradle wrapper
+        uses: gradle/actions/wrapper-validation@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -23,13 +26,28 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
+      - name: Build
+        run: ./gradlew build
+
+      - name: Get tag and project version
+        id: version
+        run: |
+          echo "TAG_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+          echo "PROJECT_VERSION=$(./gradlew -q printVersion)" >> $GITHUB_OUTPUT
+
+      - name: Fail if version mismatch
+        if: ${{ steps.version.outputs.TAG_VERSION != steps.version.outputs.PROJECT_VERSION }}
+        run: |
+          echo "Tag version (${{ steps.version.outputs.TAG_VERSION }}) doesn't match version in project (${{ steps.version.outputs.PROJECT_VERSION }})"
+          exit 1
+
       - name: Publish to Maven Central
         env:
-          SONA_USER: ${{ secrets.SONA_USER }}
-          SONA_PASS: ${{ secrets.SONA_PASS }}
-          PGP_SECRET: ${{ secrets.SONA_PGP_SECRET }}
-          PGP_PASSPHRASE: ${{ secrets.SONA_PGP_PASSPHRASE }}
-        run: ./gradlew publish
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONA_USER }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONA_PASS }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SONA_PGP_SECRET }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SONA_PGP_PASSPHRASE }}
+        run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
