--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -22,6 +22,6 @@ jobs:
       uses: snyk/actions/setup@master
 
     - name: Run Snyk to check for vulnerabilities
-      run: snyk monitor --project-name=iab-spiders-and-robots-java-client
+      run: snyk monitor --org=data-cap --project-name=iab-spiders-and-robots-java-client
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
